--- a/index.html
+++ b/index.html
@@ -1,154 +1,157 @@
 <!DOCTYPE html>
 
 <html>
+
 <head>
-    <title>Problem Set 5</title>
+  <title>Problem Set 5</title>
 
-    <!-- stylesheets -->
-    <link rel="stylesheet" type="text/css" href="css/styles.css" />
+  <!-- stylesheets -->
+  <link rel="stylesheet" type="text/css" href="css/styles.css" />
 
-    <!-- scripts -->
-    <script type="text/javascript" src="js/staff.js"></script>
-    <!-- you'll need to add your script here! -->
+  <!-- scripts -->
+  <script type="text/javascript" src="js/staff.js"></script>
+  <script type="text/javascript" src="js/shapes.js"></script>
 </head>
+
 <body>
-    <div class="header">
-        <h1>PROBLEM SET 5</h1>
-        <hr />
+  <div class="header">
+    <h1>PROBLEM SET 5</h1>
+    <hr />
+  </div>
+
+  <!-- hello -->
+  <div class="exercise" id="exercise-1">
+    <div>
+      <button id="hello">Hello</button>
+      <button id="hello-sample">Sample</button>
     </div>
 
-    <!-- hello -->
-    <div class="exercise" id="exercise-1">
-        <div>
-            <button id="hello">Hello</button>
-            <button id="hello-sample">Sample</button>
-        </div>
+    <h3>STUDENT OUTPUT</h3>
+    <p class="output" id="output-1">
+      <canvas width="1024px" height="128px" id="student-canvas-1">
 
-        <h3>STUDENT OUTPUT</h3>
-        <p class="output" id="output-1">
-            <canvas width="1024px" height="128px" id="student-canvas-1">
+      </canvas>
+    </p>
+    <br />
+    <h3>SAMPLE SOLUTION</h3>
+    <p class="sample" id="sample-1">
+      <canvas width="1024px" height="128px" id="sample-canvas-1">
 
-            </canvas>
-        </p>
-        <br />
-        <h3>SAMPLE SOLUTION</h3>
-        <p class="sample" id="sample-1">
-            <canvas width="1024px" height="128px" id="sample-canvas-1">
+      </canvas>
+    </p>
+  </div>
 
-            </canvas>
-        </p>
+  <!-- rectangle -->
+  <div class="exercise" id="exercise-2">
+    <div>
+      <button id="rectangle">Rectangle</button>
+      <button id="rectangle-sample">Sample</button>
     </div>
 
-    <!-- rectangle -->
-    <div class="exercise" id="exercise-2">
-        <div>
-            <button>Rectangle</button>
-            <button id="rectangle-sample">Sample</button>
-        </div>
+    <h3>STUDENT OUTPUT</h3>
+    <p class="output" id="output-2">
+      <canvas width="1024px" height="512px" id="student-canvas-2">
 
-        <h3>STUDENT OUTPUT</h3>
-        <p class="output" id="output-2">
-            <canvas width="1024px" height="512px" id="student-canvas-2">
+      </canvas>
+    </p>
+    <br />
+    <h3>SAMPLE SOLUTION</h3>
+    <p class="sample" id="sample-2">
+      <canvas width="1024px" height="512px" id="sample-canvas-2">
 
-            </canvas>
-        </p>
-        <br />
-        <h3>SAMPLE SOLUTION</h3>
-        <p class="sample" id="sample-2">
-            <canvas width="1024px" height="512px" id="sample-canvas-2">
+      </canvas>
+    </p>
+  </div>
 
-            </canvas>
-        </p>
+  <!-- color -->
+  <div class="exercise" id="exercise-3">
+    <div>
+      <button id="colored-rectangle">Color</button>
+      <button id="colored-rectangle-sample">Sample</button>
     </div>
 
-    <!-- color -->
-    <div class="exercise" id="exercise-3">
-        <div>
-            <button>Color</button>
-            <button id="colored-rectangle-sample">Sample</button>
-        </div>
+    <h3>STUDENT OUTPUT</h3>
+    <p class="output" id="output-3">
+      <canvas width="1024px" height="128px" id="student-canvas-3">
 
-        <h3>STUDENT OUTPUT</h3>
-        <p class="output" id="output-3">
-            <canvas width="1024px" height="128px" id="student-canvas-3">
+      </canvas>
+    </p>
+    <br />
+    <h3>SAMPLE SOLUTION</h3>
+    <p class="sample" id="sample-3">
+      <canvas width="1024px" height="128px" id="sample-canvas-3">
 
-            </canvas>
-        </p>
-        <br />
-        <h3>SAMPLE SOLUTION</h3>
-        <p class="sample" id="sample-3">
-            <canvas width="1024px" height="128px" id="sample-canvas-3">
+      </canvas>
+    </p>
+  </div>
 
-            </canvas>
-        </p>
+  <!-- triangle -->
+  <div class="exercise" id="exercise-4">
+    <div>
+      <button id="triangle">Triangle</button>
+      <button id="triangle-sample">Sample</button>
     </div>
 
-    <!-- triangle -->
-    <div class="exercise" id="exercise-4">
-        <div>
-            <button>Triangle</button>
-            <button id="triangle-sample">Sample</button>
-        </div>
+    <h3>STUDENT OUTPUT</h3>
+    <p class="output" id="output-4">
+      <canvas width="1024px" height="512px" id="student-canvas-4">
 
-        <h3>STUDENT OUTPUT</h3>
-        <p class="output" id="output-4">
-            <canvas width="1024px" height="512px" id="student-canvas-4">
+      </canvas>
+    </p>
+    <br />
+    <h3>SAMPLE SOLUTION</h3>
+    <p class="sample" id="sample-4">
+      <canvas width="1024px" height="512px" id="sample-canvas-4">
 
-            </canvas>
-        </p>
-        <br />
-        <h3>SAMPLE SOLUTION</h3>
-        <p class="sample" id="sample-4">
-            <canvas width="1024px" height="512px" id="sample-canvas-4">
+      </canvas>
+    </p>
+  </div>
 
-            </canvas>
-        </p>
+  <!-- smile -->
+  <div class="exercise" id="exercise-5">
+    <div>
+      <button id="smile">Smile</button>
+      <button id="smile-sample">Sample</button>
     </div>
 
-    <!-- smile -->
-    <div class="exercise" id="exercise-5">
-        <div>
-            <button>Smile</button>
-            <button id="smile-sample">Sample</button>
-        </div>
+    <h3>STUDENT OUTPUT</h3>
+    <p class="output" id="output-5">
+      <canvas width="1024px" height="512px" id="student-canvas-5">
 
-        <h3>STUDENT OUTPUT</h3>
-        <p class="output" id="output-5">
-            <canvas width="1024px" height="512px" id="student-canvas-5">
+      </canvas>
+    </p>
+    <br />
+    <h3>SAMPLE SOLUTION</h3>
+    <p class="sample" id="sample-5">
+      <canvas width="1024px" height="512px" id="sample-canvas-5">
 
-            </canvas>
-        </p>
-        <br />
-        <h3>SAMPLE SOLUTION</h3>
-        <p class="sample" id="sample-5">
-            <canvas width="1024px" height="512px" id="sample-canvas-5">
+      </canvas>
+    </p>
+  </div>
 
-            </canvas>
-        </p>
+  <!-- pyramid -->
+  <div class="exercise" id="exercise-6">
+    <div>
+      <button>Pyramid</button>
+      <button id="pyramid-sample">Sample</button>
     </div>
 
-    <!-- pyramid -->
-    <div class="exercise" id="exercise-6">
-        <div>
-            <button>Pyramid</button>
-            <button id="pyramid-sample">Sample</button>
-        </div>
+    <h3>STUDENT OUTPUT</h3>
+    <p class="output" id="output-6">
+      <canvas width="1024px" height="512px" id="student-canvas-6">
 
-        <h3>STUDENT OUTPUT</h3>
-        <p class="output" id="output-6">
-            <canvas width="1024px" height="512px" id="student-canvas-6">
+      </canvas>
+    </p>
 
-            </canvas>
-        </p>
+    <br />
 
-        <br />
+    <h3>SAMPLE SOLUTION</h3>
+    <p class="sample" id="sample-6">
+      <canvas width="1024px" height="512px" id="sample-canvas-6">
 
-        <h3>SAMPLE SOLUTION</h3>
-        <p class="sample" id="sample-6">
-            <canvas width="1024px" height="512px" id="sample-canvas-6">
-
-            </canvas>
-        </p>
-    </div>
+      </canvas>
+    </p>
+  </div>
 </body>
+
 </html>
